--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </head>
     <body>
       <div id="wrapper">
-        <img src="@me.png">
+        <img src="@no-u.png">
         <hr>
         🧬🔬🦠 Hardware engineer, 3D designer, DNA Processor; C#, JS, R, Q# 💖
         <br>
