fix telegram link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <hr>
         🧬🔬🦠 Hardware engineer, 3D designer, DNA Processor; C#, JS, R, Q# 💖
         <br>
-        https://t.me/ivysola
+        <a href="https://t.me/ivysola">@ivysola</a>
         <hr>
         <div id="bottom">
           <a href="https://github.com/0xF6">github</a> | <a href="https://keybase.io/ivysola/">keybase</a>| <a href='https://discord.gg/kNduSEG'>discord</a>
