--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
       <div id="wrapper">
         <img src="@no-u.png">
         <hr>
-        🧬🔬🦠 Hardware engineer, 3D designer, DNA Processor; C#, JS, R, Q# 💖
+        🧬🔬🦠 
+        <br>
+        Hardware engineer 
+        <br> 
+        3D designer, DNA Processor; 
+        <br> 
+        💖 C#, JS, R, Q# 💖
         <br>
         <a href="https://t.me/ivysola">@ivysola</a>
         <hr>
