--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <title>Yuuki Wesp</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
+            hr:first-of-type    { margin-top: -7px; }
+            #bottom             { line-height: 50px; }
+            hr:last-of-type     { margin-bottom: 0; }
             body {
                 line-height: 25px;
                 font-family: 'Times New Roman', serif;
@@ -18,11 +21,10 @@
                 margin-top: -220px;
                 max-width: 225px;
             }
-            a                   { text-decoration: none; }
-            hr:first-of-type    { margin-top: -7px; }
-            #bottom             { line-height: 50px; }
-            hr:last-of-type     { margin-bottom: 0; }
-            
+            a { 
+                text-decoration: none; 
+                color: blue;
+            }
             #wrapper {
                 border-style: ridge;
                 border-width: 5px;
