--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Yuuki Wesp</title>
+        <link rel="icon" type="image/png" href="favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             hr:first-of-type    { margin-top: -7px; }
