--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <br> 
         3D designer, DNA Processor; 
         <br> 
-        💖 C#, JS, R, Q# 💖
+        💖 C#, Q#, X#, C++, asm, R 💖
         <br>
         <a href="https://t.me/ivysola">@ivysola</a>
         <hr>
