add MAL to links

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
           <a href="https://codestats.net/users/rijndael">codestats</a> | 
           <a href="https://artstation.com/void-less">artstation</a> | 
           <a href="https://twitter.com/crown_sulfate">twitter</a>
+          <br>
+          <a href="https://myanimelist.net/animelist/IvySola">MAL</a>
         </div>
       </div>
     
