--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <meta property="og:image:height" content="522">
         <meta property="og:image:width" content="842">
         <meta property="og:image" content="resources/@og-842x522.png">
-        
+        <meta name="yandex-verification" content="59a801b33642bbd5" />
 
         <link rel="icon" type="image/png" href="resources/@favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
