--- a/index.html
+++ b/index.html
@@ -44,84 +44,114 @@
 -->
 
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Yuuki Wesp</title>
-        <meta name="Description" content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor">
-        <meta property="og:description" content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor">
-        <meta property="og:image:height" content="522">
-        <meta property="og:image:width" content="842">
-        <meta property="og:image" content="resources/@og-842x522.png">
-        <meta name="yandex-verification" content="0b26f47d7af4343b" />
+  <head>
+    <meta charset="UTF-8" />
+    <title>Yuuki Wesp</title>
+    <meta
+      name="Description"
+      content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor"
+    />
+    <meta
+      property="og:description"
+      content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor"
+    />
+    <meta property="og:image:height" content="522" />
+    <meta property="og:image:width" content="842" />
+    <meta property="og:image" content="resources/@og-842x522.png" />
+    <meta name="yandex-verification" content="0b26f47d7af4343b" />
 
-        <link rel="icon" type="image/png" href="resources/@favicon.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <script async src="scripts/@nya.min.js"></script>
-        <style>
-            hr:first-of-type    { margin-top: -7px; }
-            #bottom             { line-height: 25px; }
-            hr:last-of-type     { margin-bottom: 0; }
-            body {
-                line-height: 25px;
-                font-family: 'Times New Roman', serif;
-                background-color: #111;
-                margin: 0;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                text-align: center;
-                min-height: 100vh;
-            }
-            img {
-                margin-top: -220px;
-                max-width: 225px;
-            }
-            a { 
-                text-decoration: none; 
-                color: blue;
-            }
-            #wrapper {
-                border-style: ridge;
-                border-width: 5px;
-                background-color: white;
-            }
-            .canvas {
-                z-index: -1;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100vw;
-                height: 100vh;
-            }
-        </style>
-    
-    </head>
-    <body>
-      <div id="wrapper">
-        <img src="resources/@no-u=[outline].png">
-        <hr>
-        🧬🔬🦠 
-        <br>
-        Hardware engineer 
-        <br> 
-        3D designer, DNA Processor; 
-        <br> 
-        💖 C#, Q#, X#, C++, asm, R 💖
-        <br>
-        <a href="https://t.me/ivysola">@ivysola</a>
-        <hr>
-        <div id="bottom">
-          <a href="https://github.com/0xF6">github</a> | 
-          <a href="https://keybase.io/ivysola/">keybase</a> | 
-          <a href='https://discord.gg/kNduSEG'>discord</a> 
-          <br> 
-          <a href="https://codestats.net/users/rijndael">codestats</a> | 
-          <a href="https://artstation.com/void-less">artstation</a> | 
-          <a href="https://twitter.com/crown_sulfate">twitter</a>
-          <br>
-          <a href="https://myanimelist.net/animelist/IvySola">MAL</a>
-        </div>
+    <link rel="icon" type="image/png" href="resources/@favicon.png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <script async src="scripts/@nya.min.js"></script>
+    <style>
+      hr:first-of-type {
+        margin-top: -7px;
+      }
+      #bottom {
+        line-height: 25px;
+      }
+      hr:last-of-type {
+        margin-bottom: 0;
+      }
+      body {
+        line-height: 25px;
+        font-family: "Times New Roman", serif;
+        background-color: #111;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        min-height: 100vh;
+      }
+      img {
+        margin-top: -220px;
+        max-width: 225px;
+      }
+      a {
+        text-decoration: none;
+        color: blue;
+      }
+      #wrapper {
+        border-style: ridge;
+        border-width: 5px;
+        background-color: white;
+      }
+      .canvas {
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="wrapper">
+      <img src="resources/@no-u=[outline].png" />
+      <hr />
+      🧬🔬🦠
+      <br />
+      Hardware engineer;
+      <br />
+      3D designer, DNA Processor;
+      <br />
+      GameDev, Robotics;
+      <br />
+      💖 C#, Q#, X#, C++, asm, R 💖
+      <br />
+      <a href="https://t.me/ivysola">@ivysola</a>
+      <hr />
+      <div id="bottom">
+        <a href="https://github.com/0xF6">github</a> |
+        <a href="https://keybase.io/ivysola/">keybase</a> |
+        <a href="https://discord.gg/kNduSEG">discord</a>
+        <br />
+        <a href="https://codestats.net/users/rijndael">codestats</a> |
+        <a href="https://artstation.com/void-less">artstation</a> |
+        <a href="https://twitter.com/crown_sulfate">twitter</a>
+        <br />
+        <a href="https://myanimelist.net/animelist/IvySola">MAL</a>
       </div>
-      <canvas class="canvas"></canvas>
-    </body>
+    </div>
+    <canvas class="canvas"></canvas>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-70421575-7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-70421575-7");
+    </script>
+  </body>
 </html>
