--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
 ▄▄▄▄▄▄▄▄▄            r          ,    ─                      z                              .          τ
 ▓▓▓▓▓▓▓▓         ░  ╩           C   ]       ░░░░░░░░░  ░   ╓               [              ░░          ║
@@ -43,12 +44,11 @@
 
 -->
 
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
     <title>Yuuki Wesp</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
 
     <meta name="robots" content="all"/>
     <meta name="keywords" content="yuuki wesp, human, hardware engineer"/>
@@ -57,14 +57,20 @@
     <meta name="yandex" content="noyaca" />
 
     <meta name="Description" content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor" />
+    <!-- OG -->
+    <meta property="og:url" content="https://0xf6.moe/">
+    <meta property="og:site_name" content="Yuuki Wesp">
+    <meta property="og:title" content="Yuuki Wesp">
+    <meta property="og:type" content="website">
     <meta property="og:description" content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor" />
     <meta property="og:image:height" content="522" />
     <meta property="og:image:width" content="842" />
     <meta property="og:image" content="resources/@og-842x522.png" />
+    <!-- end OG -->
     <meta name="yandex-verification" content="0b26f47d7af4343b" />
 
     <link rel="icon" type="image/png" href="resources/@favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <script async src="scripts/@nya.min.js"></script>
     <style>
         hr:first-of-type {
