--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
             <a href="https://twitter.com/crown_sulfate">twitter</a>
             <br />
             <a href="https://myanimelist.net/animelist/IvySola">MAL</a>
+            <br />
+            <a href="https://elementary-sandbox.com/">Elementary Sandbox</a>
         </div>
     </div>
     <canvas class="canvas"></canvas>
