--- a/index.html
+++ b/index.html
@@ -45,24 +45,30 @@
 -->
 
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>Yuuki Wesp</title>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
 
-    <meta name="robots" content="all"/>
-    <meta name="keywords" content="yuuki wesp, human, hardware engineer"/>
-    <meta name="author" content="Yuuki Wesp"/>
-    <meta name="copyright" content="Yuuki Wesp"/>
+    <meta name="robots" content="all" />
+    <meta name="keywords" content="yuuki wesp, human, hardware engineer" />
+    <meta name="author" content="Yuuki Wesp" />
+    <meta name="copyright" content="Yuuki Wesp" />
     <meta name="yandex" content="noyaca" />
 
-    <meta name="Description" content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor" />
+    <meta
+      name="Description"
+      content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor"
+    />
     <!-- OG -->
-    <meta property="og:url" content="https://0xf6.moe/">
-    <meta property="og:site_name" content="Yuuki Wesp">
-    <meta property="og:title" content="Yuuki Wesp">
-    <meta property="og:type" content="website">
-    <meta property="og:description" content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor" />
+    <meta property="og:url" content="https://0xf6.moe/" />
+    <meta property="og:site_name" content="Yuuki Wesp" />
+    <meta property="og:title" content="Yuuki Wesp" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Yuuki Wesp is a hardware engineer, 3D designer and DNA Processor"
+    />
     <meta property="og:image:height" content="522" />
     <meta property="og:image:width" content="842" />
     <meta property="og:image" content="resources/@og-842x522.png" />
@@ -70,102 +76,64 @@
     <meta name="yandex-verification" content="0b26f47d7af4343b" />
 
     <link rel="icon" type="image/png" href="resources/@favicon.png" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <script async src="scripts/@nya.min.js"></script>
-    <style>
-        hr:first-of-type {
-            margin-top: -7px;
-        }
+    <link rel="stylesheet" href="@alcohol.css" />
+  </head>
 
-        #bottom {
-            line-height: 25px;
-        }
-
-        hr:last-of-type {
-            margin-bottom: 0;
-        }
-
-        body {
-            line-height: 25px;
-            font-family: "Times New Roman", serif;
-            background-color: #111;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            min-height: 100vh;
-        }
-
-        img {
-            margin-top: -220px;
-            max-width: 225px;
-        }
-
-        a {
-            text-decoration: none;
-            color: blue;
-        }
-
-        #wrapper {
-            border-style: ridge;
-            border-width: 5px;
-            background-color: white;
-        }
-
-        .canvas {
-            z-index: -1;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-        }
-    </style>
-</head>
-
-<body>
+  <body>
     <div id="wrapper">
-        <img src="resources/@no-u=[outline].png" />
-        <hr />
-        🧬🔬🦠
+      <img src="resources/@no-u=[outline]-[new-year].png" />
+      <h4>Yuuki Wesp</h4>
+      <hr />
+      🧬🔬🦠
+      <br />
+      Hardware engineer;
+      <br />
+      3D designer, DNA Processor;
+      <br />
+      GameDev, Robotics;
+      <br />
+      💖 C#, Q#, X#, C++, asm, R 💖
+      <br />
+      <a title="Telegram" href="https://t.me/ivysola">
+        @ivysola
+      </a>
+      <a title="Discord" href="https://discordapp.com/users/248481541708185600">
+        Cytosine#1448
+      </a>
+
+      <hr />
+      <div id="bottom">
+        <a href="https://github.com/0xF6">github</a> |
+        <a href="https://keybase.io/ivysola/">keybase</a> |
+        <a href="https://myanimelist.net/animelist/IvySola">MAL</a>
         <br />
-        Hardware engineer;
+        <a href="https://codestats.net/users/rijndael">codestats</a> |
+        <a href="https://artstation.com/void-less">artstation</a> |
+        <a href="https://twitter.com/crown_sulfate">twitter</a>
         <br />
-        3D designer, DNA Processor;
-        <br />
-        GameDev, Robotics;
-        <br />
-        💖 C#, Q#, X#, C++, asm, R 💖
-        <br />
-        <a href="https://t.me/ivysola">@ivysola</a>
-        <hr />
-        <div id="bottom">
-            <a href="https://github.com/0xF6">github</a> |
-            <a href="https://keybase.io/ivysola/">keybase</a> |
-            <a href="https://discord.gg/kNduSEG">discord</a>
-            <br />
-            <a href="https://codestats.net/users/rijndael">codestats</a> |
-            <a href="https://artstation.com/void-less">artstation</a> |
-            <a href="https://twitter.com/crown_sulfate">twitter</a>
-            <br />
-            <a href="https://myanimelist.net/animelist/IvySola">MAL</a>
-            <br />
-            <a href="https://elementary-sandbox.com/">Elementary Sandbox</a>
-        </div>
+        <a href="https://elementary-sandbox.com/">Elementary Sandbox</a>
+      </div>
     </div>
     <canvas class="canvas"></canvas>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70421575-7"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-70421575-7"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag("js", new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag("config", "UA-70421575-7");
+      gtag("config", "UA-70421575-7");
     </script>
-</body>
 
+    <script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js"></script>
+    <script>
+      Snowflakes();
+    </script>
+  </body>
 </html>
