--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
       if ((m === 11 && d > 25) || (m === 0 && d < 10)) {
         Snowflakes();
-        document.getElementById("base").href =
+        document.getElementById("base").src =
           "resources/@no-u=[outline]-[new-year].png";
       }
     </script>
