--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <script>
       var _ = new Date(),
         m = _.getMonth(),
-        d = _.getDay();
+        d = _.getDate();
 
       if ((m === 11 && d > 25) || (m === 0 && d < 10)) {
         Snowflakes();
