--- a/index.html
+++ b/index.html
@@ -79,23 +79,6 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <link rel="stylesheet" href="@alcohol.css" />
-
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/2.0.0/pixi.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/ColorPropsPlugin.min.js"
-    ></script>
   </head>
 
   <body>
@@ -120,8 +103,11 @@
       <a title="Discord" href="https://discordapp.com/users/248481541708185600">
         Cytosine#1448
       </a>
-      <br/>
-      <a title="Clip Studio Profile" href="https://profile.clip-studio.com/en-us/profile/pco1ikw3-4w">
+      <br />
+      <a
+        title="Clip Studio Profile"
+        href="https://profile.clip-studio.com/en-us/profile/pco1ikw3-4w"
+      >
         Clip Studio Profile
       </a>
       <hr />
@@ -152,6 +138,22 @@
     </script>
 
     <script src="https://unpkg.com/magic-snowflakes/dist/snowflakes.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/2.0.0/pixi.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/ColorPropsPlugin.min.js"
+    ></script>
     <script src="scripts/@2019-nCoV.js"></script>
     <script>
       var _ = new Date(),
