add lastfm and spotify

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
         <a href="https://artstation.com/void-less">artstation</a> |
         <a href="https://twitter.com/crown_sulfate">twitter</a>
         <br />
-        <a href="https://elementary-sandbox.com/">Elementary Sandbox</a>
+        <a href="https://www.last.fm/user/Ivysola">last.fm</a> |
+        <a href="https://open.spotify.com/user/happysperm">Spotify</a>
       </div>
     </div>
     <script id="webgl-vshader">
